# Market-Signal-Pipeline

./: .dockerignore  AGENTS.md  Dockerfile  README.md  planning.md  pyproject.toml
.agents/: README.md
.agents/prompts/: architecture-review.md  quant-review.md
examples/: run_quant_engine.py
skills/msp-arch/: SKILL.md
skills/msp-arch/agents/: openai.yaml
skills/msp-deploy/: SKILL.md
skills/msp-deploy/agents/: openai.yaml
skills/msp-ingest/: SKILL.md
skills/msp-ingest/agents/: openai.yaml
skills/msp-quant/: SKILL.md
skills/msp-quant/agents/: openai.yaml
skills/msp-report/: SKILL.md
skills/msp-report/agents/: openai.yaml
src/market_signal_pipeline/: __init__.py
src/market_signal_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/market_signal_pipeline/cli/: quant_example.py
src/market_signal_pipeline/ingest/: __init__.py  market_data.py
src/market_signal_pipeline/quant/: __init__.py  engine.py
tests/: test_market_data.py  test_quant_engine.py
